k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      # Use host aliases for local development
      hostAliases:
      - ip: "172.20.80.1"
        hostnames:
        - "keycloak.127.0.0.1.nip.io"
      containers:
      - name: server
        image: kennethreitz/httpbin
        resources:
          limits:
            memory: "64Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
      - name: oauth2-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.2.1
        resources:
          limits:
            memory: "64Mi"
            cpu: "500m"
        args:
          - "--skip-provider-button=true"
          - "--provider=oidc"
          - "--insecure-oidc-allow-unverified-email=true"
          - "--http-address=0.0.0.0:4180"
        ports:
        - containerPort: 4180
