k8s/1-redis.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app: redis-app
  serviceName: redis-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-app
    spec:
      containers:
      - name: redis-app
        image: redis:6.2.6-alpine
        ports:
        - containerPort: 6379
          name: redis
---
# Headless service for Redis
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: redis
    port: 6379
    targetPort: redis
  selector:
    app: redis-app
    statefulset.kubernetes.io/pod-name: redis-0
